Project

General

Profile

Actions

Bug #20735

closed

prism emits "ambiguous `&`" warning

Bug #20735: prism emits "ambiguous `&`" warning

Added by mame (Yusuke Endoh) about 2 years ago. Updated about 2 years ago.

Status:
Closed
Target version:
-
[ruby-core:119161]

Description

$ ./local/bin/ruby -w --parser=parse.y -e 'def foo(&) = nil; foo &:bar'
$ ./local/bin/ruby -w --parser=prism -e 'def foo(&) = nil; foo &:bar'
-e:1: warning: ambiguous `&` has been interpreted as an argument prefix
Actions

Also available in: PDF Atom