[PRISM] Do not warn ambiguous ampersand when symbol literal

Fixes [Bug #20735]